Removing getFirst calls